--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "node-template",
-  "version": "1.0.11",
-  "description": "a template for all my node projects",
+  "name": "qlik-request",
+  "version": "1.1.1",
+  "description": "helper functions to query the Qlik Sense REST endpoints",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha && istanbul cover node_modules/mocha/bin/_mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pouc/node-template.git"
+    "url": "git+https://github.com/pouc/qlik-request.git"
   },
   "author": "pouc",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pouc/node-template/issues"
+    "url": "https://github.com/pouc/qlik-request/issues"
   },
-  "homepage": "https://github.com/pouc/node-template#readme",
+  "homepage": "https://github.com/pouc/qlik-request#readme",
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "chai-things": "^0.2.0",
+    "coveralls": "^2.11.15",
     "grunt": "^1.0.1",
     "grunt-bump": "^0.8.0",
-    "grunt-coveralls": "^1.0.1",
     "grunt-jscs": "^3.0.1",
     "grunt-jsdoc-to-markdown": "^2.0.0",
     "grunt-mocha-istanbul": "^5.0.2",
@@ -30,7 +30,12 @@
     "grunt-simple-mocha": "^0.4.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "qlik-fake-proxy": "^1.1.8",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0"
+  },
+  "dependencies": {
+    "ifnotundef": "^1.0.12",
+    "q": "^1.4.1"
   }
 }
