--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qlik-request",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "helper functions to query the Qlik Sense REST endpoints",
   "main": "index.js",
   "scripts": {
@@ -35,7 +35,8 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "ifnotundef": "^1.0.12",
-    "q": "^1.4.1"
+    "ifnotundef": "^1.0.18",
+    "q": "^1.4.1",
+    "qlik-fake-proxy": "^1.1.21"
   }
 }
