--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "ifnotundef": "^1.0.18",
-    "q": "^1.4.1"
+    "coveralls": "^2.11.16",
+    "extend": "^3.0.0",
+    "ifnotundef": "^1.1.3",
+    "q": "^1.4.1",
+    "qlik-fake-proxy": "^1.1.25"
   }
 }
